flx: 优化部分代码

--- a/ecmc-biz/src/main/resources/template/email/register.html
+++ b/ecmc-biz/src/main/resources/template/email/register.html
@@ -26,7 +26,7 @@
                     <td width="720" style="padding-top: 10px; padding-bottom: 10px;">
                         <div style="border-top: 1px dashed #e9ecf0; border-bottom: 1px dashed #e9ecf0; color: #000000; font-size: 14px; padding-top: 10px; padding-bottom: 10px;">
                             <div style="line-height: 20px; color: #000000; padding-top: 5px; padding-bottom: 5px; font-weight: bold;">
-                               您在<span style="border-bottom:1px dashed #ccc;" t="5">{time}</span> 注册了混沌军团管理系统
+                               您在<span style="border-bottom:1px dashed #ccc;" t="5">{time}</span> 注册了华夏帝国军团系统
                             </div>
 
 
@@ -51,7 +51,7 @@
 
 
                         <div style="line-height: 20px; margin-bottom: 10px; font-size: 12px;">
-                            感谢您使用混沌仲裁者军团管理系统<span style="color: #ff764c;">hd-eve.com</span>！
+                            感谢您使用华夏帝国军团管理系统<span style="color: #ff764c;">https://www.qiyueeve.cn/</span>！
                             本邮件由系统自动发出，请勿回复。
                         </div>
                         <div style="line-height: 20px; margin-bottom: 10px; font-size: 12px;">祝您的朋友（们）飞行安全！
@@ -64,7 +64,7 @@
                             <tbody><tr>
                                 <td></td>
                                 <td width="200" style="text-align: center; height: 24px; font-size: 12px;">
-                                    <img src="http://mobile.12306.cn/weixin/resources/weixin/images/mail/mail_logo.jpg" width="20" height="20" style="vertical-align: bottom; margin-right: 10px;">混沌仲裁者服务中心
+                                    <img src="http://mobile.12306.cn/weixin/resources/weixin/images/mail/mail_logo.jpg" width="20" height="20" style="vertical-align: bottom; margin-right: 10px;">华夏帝国军团服务中心
                                 </td>
                             </tr>
                             <tr>
